# SkNoCpp

./: .gitignore
Chp3/: constIter.cpp  ex.cpp  excepts.cpp  initialization.cpp  initialization2.cpp  mutexes.cpp
Chp4/: enable_share_from_this.cpp  shared.cpp  shared.hpp  unique.cpp  unique.hpp
Chp5/: moveForward.cpp  perfectForwarding.cpp
Chp6/: initCaptureCpp11.cpp  lambda1.cpp  lambda2.cpp
Cpp17/: binding2.cpp  constexprLambda.cpp  copyElision.cpp  customStructBinding.cpp  debugPrinting.cpp  foldPrint.cpp  foldexpr11.cpp  foldexpr17.cpp  ifconstexpr.cpp  ifconstexpr2.cpp  initStatement1.cpp  nestedNamespace.cpp  search  search.cpp  strbinding.cpp  structuredBinding1.cpp  workingWithMaps.cpp
Cpp17/str_view/: CMakeLists.txt  constexprstr.cpp  refLifetimeExtension.cpp  stringSplit.cpp  view1.cpp  view2.cpp
Cpp17/variant/: CMakeLists.txt  cmd_line.cpp  error_handling.cpp  init.cpp  multiple_variant.cpp  type_safe_union.cpp  var1.cpp  variant_throw.cpp
Cpp20/: std_jthread.cpp  std_thread.cpp
Cpp20/ranges/: CMakeLists.txt  Interator2DVect.cpp  basic.cpp  compositions_view_range_algorithm.cpp  executaion_trace.cpp  find_last.cpp  flat.cpp  ranges_lambda.cpp  sets.cpp  simple_range.cpp  simple_range_filter.cpp  span.cpp  string_split.cpp  sum_of_seq.cpp  to.cpp
Type deduction/: arraySize.cpp  autoDeduction.cpp  autoFunction.cpp  paramType1.cpp  paramType2.cpp  paramType3.cpp  paramTypeArray.cpp  paramTypeFunction.cpp
auto/: auto_function.cpp
bfilipek/: lambdas.cpp  oldLambda.cpp
memory/: unique.hpp  unique_use.cpp
threads/: Queue.hpp  RAIIThread.hpp  (+8 more)
(+21 files in other folders)
